hphp/hack/test/typecheck/pipe_operator_containing_assignment.php.like_types.exp
File "pipe_operator_containing_assignment.php", line 8, characters 18-21:
Invalid argument (Typing[4110])
File "printf.hhi", line 122, characters 18-47:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "pipe_operator_containing_assignment.php", line 8, characters 18-21:
But got string
